--- a/drew.html
+++ b/drew.html
@@ -47,12 +47,13 @@
     transform: scaleY(-1);
   }
 
-  /* Full screen overlay */
+  /* 🔥 LIGHTER overlay so wallpaper shows */
   body::before {
     content: "";
     position: fixed;
     inset: 0;
-    background: rgba(0,0,0,0.78);
+    background: rgba(0,0,0,0.30); /* FIXED */
+    backdrop-filter: blur(4px);
     z-index: -2;
   }
 
@@ -104,15 +105,17 @@
     gap: 14px;
   }
 
+  /* 🔥 TRANSPARENT GLASS FIX */
   .card {
-    background: rgba(0,0,0,0.9);
+    background: rgba(0,0,0,0.35); /* FIXED */
     border-radius: 14px;
     padding: 26px;
     text-align: center;
-    border: 1px solid rgba(232,29,137,0.65);
+    border: 1px solid rgba(232,29,137,0.75);
+    backdrop-filter: blur(6px);
     box-shadow:
-      0 0 14px rgba(232,29,137,0.55),
-      0 0 30px rgba(232,29,137,0.28);
+      0 0 14px rgba(232,29,137,0.4),
+      0 0 30px rgba(232,29,137,0.2);
   }
 
   .roadmap-title {
@@ -125,14 +128,16 @@
     margin-top: 14px;
   }
 
+  /* 🔥 TRANSPARENT ROADMAP BLOCK FIX */
   .phase-block {
     width: 100%;
     max-width: 900px;
-    background: rgba(10,10,10,0.88);
+    background: rgba(0,0,0,0.35); /* FIXED */
     border-radius: 16px;
     border: 2px solid var(--drew-pink);
     padding: 22px 20px;
     text-align: center;
+    backdrop-filter: blur(6px);
     box-shadow:
       0 0 18px rgba(232,29,137,0.5),
       0 0 45px rgba(232,29,137,0.3);
@@ -231,7 +236,6 @@
   </div>
 
   <div class="future-title">Down The Road</div>
-
   <ul class="future-list">
     <li>• Collection 2 & 3 — Additional NFT Drops</li>
     <li>• “The Pit” — Future Utility & Expansion</li>
