--- a/drew.html
+++ b/drew.html
@@ -47,13 +47,12 @@
     transform: scaleY(-1);
   }
 
-  /* 🔥 LIGHTER overlay so wallpaper shows */
+  /* Full screen overlay (UNCHANGED) */
   body::before {
     content: "";
     position: fixed;
     inset: 0;
-    background: rgba(0,0,0,0.30); /* FIXED */
-    backdrop-filter: blur(4px);
+    background: rgba(0,0,0,0.78);
     z-index: -2;
   }
 
@@ -105,17 +104,16 @@
     gap: 14px;
   }
 
-  /* 🔥 TRANSPARENT GLASS FIX */
+  /* 🔥 GREY PARAGRAPH BOXES NOW TRANSPARENT */
   .card {
-    background: rgba(0,0,0,0.35); /* FIXED */
+    background: rgba(0,0,0,0.30); /* was 0.9 */
     border-radius: 14px;
     padding: 26px;
     text-align: center;
-    border: 1px solid rgba(232,29,137,0.75);
-    backdrop-filter: blur(6px);
+    border: 1px solid rgba(232,29,137,0.65);
     box-shadow:
-      0 0 14px rgba(232,29,137,0.4),
-      0 0 30px rgba(232,29,137,0.2);
+      0 0 14px rgba(232,29,137,0.55),
+      0 0 30px rgba(232,29,137,0.28);
   }
 
   .roadmap-title {
@@ -128,16 +126,15 @@
     margin-top: 14px;
   }
 
-  /* 🔥 TRANSPARENT ROADMAP BLOCK FIX */
+  /* 🔥 ROADMAP BOXES ALSO TRANSPARENT */
   .phase-block {
     width: 100%;
     max-width: 900px;
-    background: rgba(0,0,0,0.35); /* FIXED */
+    background: rgba(10,10,10,0.30); /* was 0.88 */
     border-radius: 16px;
     border: 2px solid var(--drew-pink);
     padding: 22px 20px;
     text-align: center;
-    backdrop-filter: blur(6px);
     box-shadow:
       0 0 18px rgba(232,29,137,0.5),
       0 0 45px rgba(232,29,137,0.3);
@@ -236,6 +233,7 @@
   </div>
 
   <div class="future-title">Down The Road</div>
+
   <ul class="future-list">
     <li>• Collection 2 & 3 — Additional NFT Drops</li>
     <li>• “The Pit” — Future Utility & Expansion</li>
