--- a/drew.html
+++ b/drew.html
@@ -6,191 +6,186 @@
 <title>$DREW — Rise Together</title>
 
 <style>
-  :root {
-    --drew-pink: #E81D89;
-  }
+:root {
+  --drew-pink: #E81D89;
+}
 
-  * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-  }
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 
-  html, body {
-    width: 100%;
-    min-height: 100%;
-    font-family: system-ui, sans-serif;
-    color: #fff;
-    overflow-x: hidden;
-    position: relative;
-  }
+html, body {
+  width: 100%;
+  min-height: 100%;
+  font-family: system-ui, sans-serif;
+  color: #fff;
+  overflow-x: hidden;
+  background: #000;
+}
 
-  /* NEW: Double mirrored wallpaper */
-  .bg-wallpaper {
-    position: fixed;
-    inset: 0;
-    z-index: -3;
-    display: flex;
-    flex-direction: column;
-  }
+/* Wallpaper ALWAYS visible */
+.bg-wallpaper {
+  position: fixed;
+  inset: 0;
+  z-index: -3;
+  background-image: url("peacockedit.jpeg");
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
+}
 
-  .bg-top,
-  .bg-bottom {
-    flex: 1;
-    background-image: url("peacockedit.jpeg");
-    background-size: cover;
-    background-position: center;
-  }
+/* Slight dark tint so text is readable */
+body::before {
+  content: "";
+  position: fixed;
+  inset: 0;
+  background: rgba(0,0,0,0.55);
+  backdrop-filter: brightness(0.8);
+  z-index: -2;
+}
 
-  /* Mirror bottom half */
-  .bg-bottom {
-    transform: scaleY(-1);
-  }
+/* PAGE LAYOUT */
+.page {
+  position: relative;
+  padding: 12vh 7vw;
+  display: flex;
+  flex-direction: column;
+  gap: 110px;
+  text-align: center;
+}
 
-  /* Full screen overlay */
-  body::before {
-    content: "";
-    position: fixed;
-    inset: 0;
-    background: rgba(0,0,0,0.78);
-    z-index: -2;
-  }
+/* HERO */
+.heading {
+  font-size: clamp(70px, 12vw, 140px);
+  color: var(--drew-pink);
+  font-weight: 900;
+  text-shadow: 0 0 28px rgba(232,29,137,0.9);
+}
 
-  .page {
-    position: relative;
-    z-index: 1;
-    padding: 10vh 6vw 12vh;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 38px;
-  }
+.divider {
+  width: 200px;
+  height: 6px;
+  margin: 20px auto 0;
+  background: var(--drew-pink);
+  opacity: 0.9;
+  border-radius: 4px;
+}
 
-  .heading {
-    font-size: clamp(48px, 8vw, 100px);
-    font-weight: 900;
-    letter-spacing: 0.05em;
-    color: var(--drew-pink);
-    text-shadow:
-      0 0 14px rgba(232,29,137,0.9),
-      0 0 36px rgba(232,29,137,0.6);
-    text-align: center;
-    text-transform: uppercase;
-  }
+/* Subtitle */
+.subheading {
+  font-size: clamp(17px, 2.2vw, 26px);
+  max-width: 900px;
+  opacity: 0.95;
+  line-height: 1.65;
+  margin: 18px auto 0;
+}
 
-  .divider {
-    width: 160px;
-    height: 4px;
-    border-radius: 4px;
-    background: var(--drew-pink);
-    box-shadow:
-      0 0 12px rgba(232,29,137,0.95),
-      0 0 32px rgba(232,29,137,0.6);
-  }
+/* MISSION CARDS */
+.cards {
+  width: 100%;
+  max-width: 1000px;
+  display: grid;
+  gap: 22px;
+  margin: 0 auto;
+}
 
-  .subheading {
-    font-size: clamp(15px, 1.9vw, 21px);
-    max-width: 900px;
-    text-align: center;
-    opacity: 0.95;
-    line-height: 1.6;
-  }
+.card {
+  background: rgba(0,0,0,0.45);
+  border: 1px solid rgba(232,29,137,0.4);
+  padding: 28px 26px;
+  border-radius: 18px;
+  backdrop-filter: blur(6px);
+  font-size: clamp(15px, 2vw, 20px);
+  line-height: 1.65;
+}
 
-  .cards {
-    width: 100%;
-    max-width: 900px;
-    display: flex;
-    flex-direction: column;
-    gap: 14px;
-  }
+/* ROADMAP */
+.roadmap-title {
+  font-size: clamp(44px, 8vw, 90px);
+  font-weight: 900;
+  color: var(--drew-pink);
+}
 
-  .card {
-    background: rgba(0,0,0,0.9);
-    border-radius: 14px;
-    padding: 26px;
-    text-align: center;
-    border: 1px solid rgba(232,29,137,0.65);
-    box-shadow:
-      0 0 14px rgba(232,29,137,0.55),
-      0 0 30px rgba(232,29,137,0.28);
-  }
+.timeline {
+  width: 100%;
+  max-width: 800px;
+  margin: auto;
+  border-left: 3px solid var(--drew-pink);
+  display: flex;
+  flex-direction: column;
+  gap: 70px;
+  padding-left: 36px;
+}
 
-  .roadmap-title {
-    font-size: clamp(34px, 6vw, 62px);
-    font-weight: 900;
-    color: var(--drew-pink);
-    text-transform: uppercase;
-    text-shadow: 0 0 20px rgba(232,29,137,0.8);
-    text-align: center;
-    margin-top: 14px;
-  }
+/* Timeline blocks */
+.phase-block {
+  position: relative;
+  text-align: left;
+  background: rgba(0,0,0,0.38);
+  padding: 22px 24px;
+  border-radius: 14px;
+  backdrop-filter: blur(4px);
+  border: 1px solid rgba(232,29,137,0.4);
+  font-size: clamp(16px, 1.9vw, 20px);
+}
 
-  .phase-block {
-    width: 100%;
-    max-width: 900px;
-    background: rgba(10,10,10,0.88);
-    border-radius: 16px;
-    border: 2px solid var(--drew-pink);
-    padding: 22px 20px;
-    text-align: center;
-    box-shadow:
-      0 0 18px rgba(232,29,137,0.5),
-      0 0 45px rgba(232,29,137,0.3);
-    margin-bottom: 20px;
-  }
+/* Bullet dots */
+.phase-block::before {
+  content: "";
+  position: absolute;
+  left: -48px;
+  top: 18px;
+  width: 22px;
+  height: 22px;
+  background: var(--drew-pink);
+  border-radius: 50%;
+  box-shadow: 0 0 14px rgba(232,29,137,0.8);
+}
 
-  .phase-number {
-    font-size: 30px;
-    font-weight: 800;
-    color: var(--drew-pink);
-  }
+.phase-number {
+  font-size: 22px;
+  font-weight: 800;
+  margin-bottom: 6px;
+  color: var(--drew-pink);
+}
 
-  .arrow {
-    font-size: 40px;
-    color: var(--drew-pink);
-    text-shadow: 0 0 15px rgba(232,29,137,0.8);
-    margin: -8px 0 18px;
-  }
+/* FUTURE */
+.future-title {
+  font-size: clamp(26px, 3.2vw, 40px);
+  color: var(--drew-pink);
+  font-weight: 700;
+}
 
-  .future-title {
-    font-size: 24px;
-    color: var(--drew-pink);
-    font-weight: 700;
-    text-align: center;
-    text-shadow: 0 0 12px rgba(232,29,137,0.7);
-    text-transform: uppercase;
-    margin-top: 30px;
-  }
-
-  .future-list {
-    list-style: none;
-    padding: 0;
-    text-align: center;
-    font-size: 17px;
-    opacity: 0.9;
-    line-height: 1.75;
-  }
+.future-list {
+  list-style: none;
+  padding: 0;
+  line-height: 1.8;
+  opacity: 0.95;
+  font-size: clamp(15px, 2vw, 20px);
+}
 </style>
-</head>
 
+</head>
 <body>
 
-<!-- MIRRORED WALLPAPER BACKGROUND -->
-<div class="bg-wallpaper">
-  <div class="bg-top"></div>
-  <div class="bg-bottom"></div>
-</div>
+<!-- Wallpaper -->
+<div class="bg-wallpaper"></div>
 
 <div class="page">
 
-  <div class="heading">$DREW</div>
-  <div class="divider"></div>
-
-  <div class="subheading">
-    Our mission is to build a strong and united community supporting men’s mental health.<br>
-    Donations are chosen by the community — driven by $DREW holders.
+  <!-- HERO -->
+  <div>
+    <div class="heading">$DREW</div>
+    <div class="divider"></div>
+    <div class="subheading">
+      Our mission is to build a strong and united community supporting men’s mental health.<br>
+      Donations are chosen by the community — driven by $DREW holders.
+    </div>
   </div>
 
+  <!-- MISSION CARDS -->
   <div class="cards">
     <section class="card">
       $DREW is a community-driven token with a purpose:<br>
@@ -205,37 +200,38 @@
     </section>
   </div>
 
-  <div class="roadmap-title">Roadmap</div>
+  <!-- ROADMAP -->
+  <div>
+    <div class="roadmap-title">Roadmap</div>
 
-  <div class="phase-block">
-    <div class="phase-number">PHASE 1</div>
-    NFT Collection #1 — 888 $DREW NFTs
+    <div class="timeline">
+      <div class="phase-block">
+        <div class="phase-number">PHASE 1</div>
+        NFT Collection #1 — 888 $DREW NFTs
+      </div>
+
+      <div class="phase-block">
+        <div class="phase-number">PHASE 2</div>
+        $DREW Token Creation — Airdrop to NFT Holders
+      </div>
+
+      <div class="phase-block">
+        <div class="phase-number">PHASE 3</div>
+        Token Trading Live
+      </div>
+
+      <div class="phase-block">
+        <div class="phase-number">PHASE 4</div>
+        First Quarterly Charity Vote + Donation
+      </div>
+    </div>
+
+    <div class="future-title">Down The Road</div>
+    <ul class="future-list">
+      <li>• Collection 2 & 3 — Additional NFT Drops</li>
+      <li>• “The Pit” — Future Utility & Expansion</li>
+    </ul>
   </div>
-  <div class="arrow">↓</div>
-
-  <div class="phase-block">
-    <div class="phase-number">PHASE 2</div>
-    $DREW Token Creation — Airdrop to NFT Holders
-  </div>
-  <div class="arrow">↓</div>
-
-  <div class="phase-block">
-    <div class="phase-number">PHASE 3</div>
-    Token Trading Live
-  </div>
-  <div class="arrow">↓</div>
-
-  <div class="phase-block">
-    <div class="phase-number">PHASE 4</div>
-    First Quarterly Charity Vote + Donation
-  </div>
-
-  <div class="future-title">Down The Road</div>
-
-  <ul class="future-list">
-    <li>• Collection 2 & 3 — Additional NFT Drops</li>
-    <li>• “The Pit” — Future Utility & Expansion</li>
-  </ul>
 
 </div>
 </body>
