--- a/drew.html
+++ b/drew.html
@@ -1,450 +1,199 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$DREW — Mission & Movement</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>$DREW — Rise Together</title>
 
-  <style>
-    :root {
-      --neon-pink: #E81D89;
-      --neon-pink-soft: rgba(232,29,137,0.45);
-      --card-bg: rgba(0,0,0,0.84);
-      --border-pink: rgba(232,29,137,0.7);
-    }
+<style>
+:root {
+  --neon: #E81D89;
+  --bg: #000000;
+  --card: rgba(0,0,0,0.55);
+}
 
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
+/* RESET */
+* { margin: 0; padding: 0; box-sizing: border-box; }
 
-    html, body {
-      width: 100%;
-      min-height: 100%;
-      background: #000;
-      color: #fff;
-      font-family: system-ui, sans-serif;
-      scroll-behavior: smooth;
-    }
+html, body {
+  width: 100%;
+  background: var(--bg);
+  font-family: system-ui, sans-serif;
+  color: #fff;
+  overflow-x: hidden;
+}
 
-    body {
-      background-image: url("peacockedit.jpeg");
-      background-size: cover;
-      background-repeat: repeat-y;
-      background-position: center;
-    }
+/* HEADER */
+header {
+  width: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  backdrop-filter: blur(6px);
+  background: rgba(0,0,0,0.5);
+  border-bottom: 1px solid rgba(232,29,137,0.4);
+  z-index: 99;
+  padding: 14px 26px;
+}
 
-    /* Sticky header */
-    .sticky-header {
-      position: fixed;
-      top: 0;
-      width: 100%;
-      padding: 14px 4vw;
-      background: rgba(0,0,0,0.4);
-      backdrop-filter: blur(12px);
-      border-bottom: 1px solid rgba(232,29,137,0.3);
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      z-index: 999;
-    }
+header .logo {
+  font-size: 32px;
+  font-weight: 900;
+  color: var(--neon);
+  letter-spacing: 0.1em;
+  text-shadow: 0 0 16px rgba(232,29,137,0.8);
+}
 
-    .top-title {
-      font-size: clamp(32px, 4vw, 48px);
-      font-weight: 900;
-      letter-spacing: 0.12em;
-      text-transform: uppercase;
-      color: var(--neon-pink);
-      cursor: pointer;
-      text-shadow: 0 0 14px var(--neon-pink-soft);
-      position: relative;
-    }
+/* MAIN CONTENT WRAPPER */
+.page {
+  margin-top: 100px;
+  display: flex;
+  flex-direction: column;
+  gap: 70px;
+  padding: 60px 7vw;
+}
 
-    .nav-links {
-      display: flex;
-      gap: 24px;
-      align-items: center;
-    }
+/* QUOTE CARDS */
+.quote-card {
+  display: flex;
+  align-items: center;
+  gap: 36px;
+  padding: 28px;
+  background: var(--card);
+  border-radius: 18px;
+  border: 1px solid rgba(232,29,137,0.5);
+  box-shadow: 0 0 32px rgba(232,29,137,0.2);
+}
 
-    .nav-link {
-      font-size: clamp(13px, 1.7vw, 16px);
-      text-transform: uppercase;
-      letter-spacing: 0.16em;
-      cursor: pointer;
-      color: var(--neon-pink);
-      text-shadow: 0 0 10px var(--neon-pink-soft);
-      position: relative;
-    }
+.quote-card:nth-child(even) {
+  flex-direction: row-reverse;
+}
 
-    .nav-link:hover::after {
-      content: "";
-      position: absolute;
-      top: 100%;
-      left: 50%;
-      width: 5px;
-      height: 5px;
-      background: var(--neon-pink);
-      border-radius: 50%;
-      transform: translateX(-50%);
-      animation: dripFall 0.9s ease forwards;
-    }
+.quote-card img {
+  width: 260px;
+  height: 260px;
+  object-fit: cover;
+  border-radius: 12px;
+  border: 2px solid var(--neon);
+  box-shadow: 0 0 18px rgba(232,29,137,0.8);
+}
 
-    @keyframes dripFall {
-      0%   { opacity: 1; transform: translate(-50%,0) scale(1); }
-      60%  { opacity: 0.7; transform: translate(-50%,26px) scale(0.75); }
-      100% { opacity: 0;   transform: translate(-50%,40px) scale(0.2); }
-    }
+.quote-text {
+  font-size: 20px;
+  line-height: 1.55;
+  max-width: 600px;
+}
 
-    .page {
-      padding: 18vh 6vw 14vh;
-      display: flex;
-      flex-direction: column;
-      gap: 40px;
-      max-width: 1040px;
-      margin: 0 auto;
-    }
+.author {
+  margin-top: 12px;
+  font-size: 16px;
+  font-weight: 600;
+  opacity: 0.95;
+}
 
-    /* Quote + photo cards */
-    .quote-block {
-      display: flex;
-      gap: 24px;
-      align-items: center;
-      background: var(--card-bg);
-      border-radius: 18px;
-      border: 1px solid rgba(232,29,137,0.3);
-      padding: 18px 22px;
-      box-shadow: 0 0 24px rgba(0,0,0,0.7);
-    }
+/* BUTTONS */
+.card-link {
+  display: inline-block;
+  margin-top: 18px;
+  padding: 12px 22px;
+  border-radius: 12px;
+  font-size: 16px;
+  text-decoration: none;
+  text-transform: uppercase;
+  letter-spacing: 0.12em;
+  border: 1px solid var(--neon);
+  color: var(--neon);
+  transition: 0.25s ease;
+}
 
-    .quote-photo {
-      flex-shrink: 0;
-      width: 220px;
-      height: 220px;
-      border-radius: 16px;
-      object-fit: cover;
-      border: 2px solid var(--border-pink);
-      box-shadow:
-        0 0 18px rgba(232,29,137,0.55),
-        0 0 34px rgba(0,0,0,0.9);
-    }
+.card-link:hover {
+  background: var(--neon);
+  color: #000;
+  box-shadow: 0 0 20px var(--neon);
+}
 
-    .quote-text {
-      font-size: 15px;
-      line-height: 1.7;
-    }
+/* ROADMAP SECTION */
+.roadmap-card {
+  width: 100%;
+  border-radius: 18px;
+  overflow: hidden;
+  border: 1px solid rgba(232,29,137,0.6);
+  box-shadow: 0 0 32px rgba(232,29,137,0.4);
+}
 
-    .quote-text blockquote {
-      margin-bottom: 10px;
-      font-style: italic;
-    }
+.roadmap-card img {
+  width: 100%;
+  display: block;
+}
 
-    .quote-author {
-      font-weight: 600;
-      letter-spacing: 0.08em;
-      text-transform: uppercase;
-      color: var(--neon-pink);
-    }
-
-    /* Section label above some groups */
-    .section-tag {
-      font-size: 13px;
-      letter-spacing: 0.22em;
-      text-transform: uppercase;
-      color: rgba(255,255,255,0.65);
-      margin-left: 4px;
-    }
-
-    /* Accordion / boxes */
-    .accordion-wrapper {
-      display: flex;
-      flex-direction: column;
-      gap: 14px;
-      margin-top: 8px;
-      margin-bottom: 18px;
-    }
-
-    .accordion-header {
-      background: #000;
-      padding: 18px 22px;
-      border-radius: 14px;
-      border: 2px solid var(--border-pink);
-      cursor: pointer;
-      display: flex;
-      justify-content: center;
-      transition: 0.25s;
-      box-shadow: 0 0 18px rgba(232,29,137,0.32);
-    }
-
-    .accordion-header:hover {
-      border-color: var(--neon-pink);
-      box-shadow: 0 0 30px rgba(232,29,137,0.85);
-      transform: translateY(-2px);
-    }
-
-    .accordion-label {
-      font-size: clamp(18px, 2.3vw, 22px);
-      letter-spacing: 0.22em;
-      text-transform: uppercase;
-      color: var(--neon-pink);
-      text-shadow: 0 0 14px var(--neon-pink-soft);
-      position: relative;
-    }
-
-    .accordion-header:hover .accordion-label::before {
-      content: "";
-      position: absolute;
-      left: 50%;
-      top: 70%;
-      width: 7px;
-      height: 7px;
-      background: var(--neon-pink);
-      border-radius: 50%;
-      filter: drop-shadow(0 0 12px rgba(232,29,137,0.9));
-      transform: translateX(-50%);
-      animation: dripFall 1.1s ease forwards;
-    }
-
-    .accordion-content {
-      max-height: 0;
-      overflow: hidden;
-      background: rgba(0,0,0,0.86);
-      border-radius: 0 0 14px 14px;
-      border: 2px solid rgba(232,29,137,0.25);
-      border-top: none;
-      margin-top: -2px;
-      padding: 0 22px;
-      transition: max-height 0.32s ease, padding 0.24s ease;
-    }
-
-    .accordion-content.open {
-      max-height: 260px;
-      padding: 16px 22px 22px;
-    }
-
-    .accordion-text {
-      font-size: 15px;
-      line-height: 1.7;
-      text-align: center;
-      opacity: 0.94;
-    }
-
-    /* Roadmap card */
-    .roadmap-card {
-      background: var(--card-bg);
-      border-radius: 18px;
-      border: 1px solid rgba(232,29,137,0.45);
-      padding: 20px 24px;
-      box-shadow: 0 0 26px rgba(0,0,0,0.8);
-      text-align: center;
-    }
-
-    .roadmap-title {
-      font-size: 18px;
-      letter-spacing: 0.22em;
-      text-transform: uppercase;
-      color: var(--neon-pink);
-      margin-bottom: 10px;
-    }
-
-    .roadmap-link {
-      text-decoration: none;
-      color: var(--neon-pink);
-      font-weight: 600;
-    }
-
-    /* Responsive */
-    @media (max-width: 768px) {
-      .sticky-header {
-        flex-direction: column;
-        gap: 10px;
-        align-items: flex-start;
-      }
-      .nav-links {
-        flex-wrap: wrap;
-        gap: 14px;
-      }
-      .page {
-        padding: 16vh 4vw 10vh;
-      }
-      .quote-block {
-        flex-direction: column;
-        align-items: flex-start;
-      }
-      .quote-photo {
-        width: 180px;
-        height: 180px;
-      }
-    }
-  </style>
+/* MOBILE */
+@media(max-width: 900px){
+  .quote-card {
+    flex-direction: column !important;
+    text-align: center;
+  }
+  .quote-card img {
+    width: 80%;
+    height: auto;
+  }
+}
+</style>
 </head>
+
 <body>
 
-  <!-- Sticky header -->
-  <header class="sticky-header">
-    <div class="top-title" onclick="window.scrollTo({ top: 0, behavior: 'smooth' })">
-      $DREW
+<header>
+  <div class="logo">$DREW</div>
+</header>
+
+<div class="page">
+
+  <!-- Marcus Aurelius - Mission -->
+  <div class="quote-card">
+    <img src="images/marcus-aurelius.jpg" alt="Marcus Aurelius">
+    <div>
+      <p class="quote-text">“The things you think about determine the quality of your mind. Your soul takes on the color of your thoughts.”</p>
+      <p class="author">— Marcus Aurelius</p>
+      <a href="mission.html" class="card-link">Our Mission →</a>
     </div>
-    <nav class="nav-links">
-      <div class="nav-link" onclick="document.getElementById('token-section').scrollIntoView({behavior:'smooth'})">Token</div>
-      <div class="nav-link" onclick="document.getElementById('nft-section').scrollIntoView({behavior:'smooth'})">NFTs</div>
-      <div class="nav-link" onclick="document.getElementById('mission-area').scrollIntoView({behavior:'smooth'})">Movement</div>
-      <div class="nav-link" onclick="document.getElementById('pit-section').scrollIntoView({behavior:'smooth'})">Pit</div>
-    </nav>
-  </header>
+  </div>
 
-  <main class="page">
+  <!-- Alan Watts - Community -->
+  <div class="quote-card">
+    <img src="images/watts.jpeg" alt="Alan Watts">
+    <div>
+      <p class="quote-text">“For the price of intelligence as we now know it is chronic anxiety — anxiety which appears to increase, oddly enough, to the very degree that human life is subjected to intelligent organization.”</p>
+      <p class="author">— Alan Watts</p>
+      <a href="community.html" class="card-link">Join the Community →</a>
+    </div>
+  </div>
 
-    <!-- Marcus Aurelius + Mission -->
-    <section id="mission-area">
-      <div class="section-tag">Mission</div>
-      <div class="quote-block">
-        <img src="marcus-aurelius.jpg" alt="Marcus Aurelius" class="quote-photo">
-        <div class="quote-text">
-          <blockquote>
-            “The things you think about determine the quality of your mind. Your soul takes on the color of your thoughts.”
-          </blockquote>
-          <div class="quote-author">— Marcus Aurelius</div>
-        </div>
-      </div>
+  <!-- Roadmap Visual -->
+  <div class="roadmap-card">
+    <img src="images/psychedelic-road.jpeg" alt="Roadmap">
+  </div>
 
-      <div class="accordion-wrapper">
-        <div class="accordion-header">
-          <span class="accordion-label">Mission</span>
-        </div>
-        <div class="accordion-content">
-          <p class="accordion-text">
-            <!-- Your mission copy goes here -->
-            We are building a community-led movement to help men rise — mentally, emotionally and financially —
-            by directing real support and resources where they are needed most.
-          </p>
-        </div>
-      </div>
-    </section>
+  <!-- Terence McKenna - NFTs -->
+  <div class="quote-card">
+    <img src="images/Mckenna.jpg" alt="Terence McKenna">
+    <div>
+      <p class="quote-text">“The main thing to understand is that we are imprisoned in some kind of work of art.”</p>
+      <p class="author">— Terence McKenna</p>
+      <a href="nfts.html" class="card-link">Access NFTs →</a>
+    </div>
+  </div>
 
-    <!-- Alan Watts + Community -->
-    <section>
-      <div class="section-tag">Community</div>
-      <div class="quote-block">
-        <img src="watts.jpeg" alt="Alan Watts" class="quote-photo">
-        <div class="quote-text">
-          <blockquote>
-            “For the price of intelligence as we now know it is chronic anxiety — anxiety which appears to increase, oddly enough, to the very degree that human life is subjected to intelligent organization.”
-          </blockquote>
-          <div class="quote-author">— Alan Watts</div>
-        </div>
-      </div>
+  <!-- Carl Jung - The Pit -->
+  <div class="quote-card">
+    <img src="images/jung.jpg" alt="Carl Jung">
+    <div>
+      <p class="quote-text">“Loneliness does not come from having no people about one, but from being unable to communicate the things that seem important to oneself, or from holding certain views which others find inadmissible.”</p>
+      <p class="author">— Carl Jung</p>
+      <a href="pit.html" class="card-link">Enter the Pit →</a>
+    </div>
+  </div>
 
-      <div class="accordion-wrapper">
-        <div class="accordion-header">
-          <span class="accordion-label">Community</span>
-        </div>
-        <div class="accordion-content">
-          <p class="accordion-text">
-            <!-- Your community copy goes here -->
-            The DREW collective chooses the direction of the movement — proposing ideas, voting on charities and
-            showing up for one another in the process.
-          </p>
-        </div>
-      </div>
-    </section>
-
-    <!-- Roadmap Card (standalone) -->
-    <section>
-      <div class="section-tag">Roadmap</div>
-      <div class="roadmap-card">
-        <div class="roadmap-title">Roadmap</div>
-        <p class="accordion-text" style="margin-bottom: 10px;">
-          Explore where this movement is headed next — phases, milestones and how every holder plays a part.
-        </p>
-        <a href="roadmap.html" class="roadmap-link">➡ View the full $DREW roadmap</a>
-      </div>
-    </section>
-
-    <!-- McKenna + NFTs + Token -->
-    <section id="nft-section">
-      <div class="section-tag">NFTs & Token</div>
-      <div class="quote-block">
-        <img src="Mckenna.jpg" alt="Terence McKenna" class="quote-photo">
-        <div class="quote-text">
-          <blockquote>
-            “The main thing to understand is that we are imprisoned in some kind of work of art.”
-          </blockquote>
-          <div class="quote-author">— Terence McKenna</div>
-        </div>
-      </div>
-
-      <div class="accordion-wrapper">
-        <!-- NFTs box -->
-        <div class="accordion-header">
-          <span class="accordion-label">NFTs</span>
-        </div>
-        <div class="accordion-content">
-          <p class="accordion-text">
-            <!-- Your NFTs copy -->
-            The genesis DREW NFTs are your access keys — limited pieces that connect you to future drops,
-            token distributions and the inner workings of the movement.
-          </p>
-        </div>
-
-        <!-- Token box -->
-        <div class="accordion-header" id="token-section">
-          <span class="accordion-label">$DREW Token</span>
-        </div>
-        <div class="accordion-content">
-          <p class="accordion-text">
-            <!-- Your token copy -->
-            The $DREW token powers the economy of the movement — rewarding those who stay, contribute and help
-            amplify support for men’s mental health.
-          </p>
-        </div>
-      </div>
-    </section>
-
-    <!-- Jung + The Pit -->
-    <section id="pit-section">
-      <div class="section-tag">The Pit</div>
-      <div class="quote-block">
-        <img src="jung.jpg" alt="Carl Jung" class="quote-photo">
-        <div class="quote-text">
-          <blockquote>
-            “Loneliness does not come from having no people about one, but from being unable to communicate the things that seem important to oneself, or from holding certain views which others find inadmissible.”
-          </blockquote>
-          <div class="quote-author">— Carl Jung</div>
-        </div>
-      </div>
-
-      <div class="accordion-wrapper">
-        <div class="accordion-header">
-          <span class="accordion-label">The Pit</span>
-        </div>
-        <div class="accordion-content">
-          <p class="accordion-text">
-            <!-- Your Pit copy -->
-            The Pit is where we face the hard truths — the conversations most men avoid. It’s a space to surface
-            what’s usually buried, and to realise none of us are in that darkness alone.
-          </p>
-        </div>
-      </div>
-    </section>
-
-  </main>
-
-  <script>
-    // Accordion auto-close behaviour
-    document.querySelectorAll('.accordion-header').forEach(header => {
-      header.addEventListener('click', () => {
-        const content = header.nextElementSibling;
-        if (!content || !content.classList.contains('accordion-content')) return;
-
-        document.querySelectorAll('.accordion-content').forEach(c => {
-          if (c !== content) c.classList.remove('open');
-        });
-
-        content.classList.toggle('open');
-      });
-    });
-  </script>
+</div>
 
 </body>
 </html>
